# CircuitInsight

./: .gitattributes  .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: cs_amp_tb.cin.json  gui_demo.py  hier_diffpair.cin.json  rc_lowpass.cin.json
schema/: cin-0.1.schema.json
scripts/: srr_smoke.py  transcap_analysis.py
src/circuitinsight/: __init__.py  analyzer.py  keep.py  reduce.py  session.py  values.py
src/circuitinsight/adapters/: __init__.py  cin.py
src/circuitinsight/analysis/: __init__.py  bandwidth.py  compensate.py  estimate.py  gft.py  loopgain.py  modes.py  nested_gft.py  probeadequacy.py  sensitivity.py  simplify.py  validate.py
src/circuitinsight/engine/: __init__.py  interp.py  mna.py  primitives.py
tests/: test_backends.py  test_band_sensitivity.py  test_bandwidth.py  test_bjt_model.py  test_cin.py  test_compensate.py  test_compensate_de.py  test_compensate_fdnmc.py  test_compensate_locusnoise.py  test_compensate_nb.py  test_compensate_nc.py  test_compensate_nd.py  test_compensate_ne.py  test_compensate_spec.py  test_equivalent.py  test_estimate.py  test_fd_fixture.py  test_fd_mismatch.py  test_follower3p.py  test_gft.py  test_gft_hybrid.py  test_gii_model.py  test_gui_app.py  test_gui_p0.py  test_gui_p1.py  test_gui_p2.py  test_gui_tail.py  test_gui_view.py  test_impedance.py  test_import_guard.py  test_interp.py  test_keep.py  test_loopgain.py  test_m0_fixture.py  test_mna.py  test_modes.py  test_nested_gft.py  test_nmc3_fixture.py  test_nmc3d_fixture.py  test_ota2s.py  (+14 more)
tests/golden/: test_golden.py
(+139 files in other folders)
